# tonic-side-effect

./: Cargo.toml  README.md
src/: lib.rs
